lms/static/sass/multicourse/_courses.scss
// lms - views - course discovery
// ====================

// Table of Contents
// * +Imports - Search
// * +Variables - Search
// * +Layout - Courses Container
// * +Header - Course Search
// * +Search Input
// * +Filters - Search
// * +Facets - Sidebar - Search
// * +All Other Styles


// +Imports - Search
// ====================
@import '../base/grid-settings';
@import 'neat/neat'; // lib - Neat

// +Variables - Search
// ====================
$facet-text-color: #3d3e3f;
$facet-background-color: #007db8;

// +Layout - Courses Container
// ====================
.find-courses, .university-profile {

  .discovery-button:not(:disabled) {
    @extend %t-action2;
    outline: 0 none;
    box-shadow:none;
    border: 0;
    background: none;
    padding: 0 ($baseline*0.6);
    text-align: left;
    text-decoration: none;
    text-shadow: none;
    text-transform: none;

    //STATE: hover
    &::hover {
      background: none;
    }
  }

  .courses-container {
    padding: ($baseline*3) ($baseline/2) 0 ($baseline/2);

    .courses {
      @include rtl() { $layout-direction: "RTL"; }
      @include fill-parent();

      @include media($bp-medium) {
        @include span-columns(8);
      }

      @include media($bp-large) {
        @include span-columns(8);
      }

      @include media($bp-huge) {
        @include span-columns(9);
      }

      .courses-listing .courses-listing-item {
        @include fill-parent();
        margin: 0 0 ($baseline*1.5) 0;
        max-height: $course-card-height;

        @include media($bp-medium) {
          @include span-columns(4); // 4 of 8
          @include omega(1n);
        }

        @include media($bp-large) {
          @include span-columns(6); // 6 of 12
          @include omega(2n);
        }

        @include media($bp-huge) {
          @include span-columns(4); // 4 of 12
          @include omega(3n);
        }
      }
    }
  }
}

// +Hero - Home Header
// ====================
.find-courses, .university-profile {

  header.search {
    background: $course-profile-bg;
    background-size: cover;
    background-image: $homepage-bg-image;
    background-position: center top !important;
    border-bottom: 1px solid $border-color-3;
    box-shadow: inset 0 -1px 8px 0 rgba(0,0,0, 0.2), inset 0 1px 12px 0 rgba(0,0,0, 0.3);
    height: 430px;
    margin-top: $header_image_margin;
    width: 100%;

    .inner-wrapper {
      height: 120px;
      margin: 0 auto;
      max-width: 1200px;
      min-width: 760px;
      padding-top: ($baseline*10);
      position: relative;
      text-align: center;
      width: flex-grid(12);

      > hgroup {
        background: $white;
        background: $course-header-bg;
        border: 1px solid $border-color-3;
        box-shadow: 0 4px 25px 0 rgba(0,0,0, 0.5);
        padding: $baseline ($baseline*1.5);
        position: relative;
        z-index: 2;
      }

      &.main-search, &.university-search {
        text-align: center;

        hgroup {
          display: inline-block;
        }

        .logo {
          display: inline-block;
          @include border-right(1px solid $light-gray);
          height: 80px;
          @include margin-right(30px);
          @include padding-right(30px);
          position: relative;
          vertical-align: middle;

          &::after {
            content: "";
            display: block;
            height: 80px;
            position: absolute;
            right: 0px;
            top: 0px;
          }

          img {
            height: 100%;
          }
        }

        h1 {
          color: $base-font-color;
          font-family: $sans-serif;
          font-style: italic;
          font-weight: 800;
          letter-spacing: 0px;
          text-transform: none;
        }

        h1, h2 {
          display: inline-block;
          letter-spacing: 1px;
          margin-bottom: 0;
          text-shadow: 0 1px rgba(255,255,255, 0.8);
          vertical-align: middle;
        }
      }
    }
  }
}

// +Search Input
// ====================
.find-courses {

  .wrapper-search-context {
    @include outer-container;
    @include rtl() { $layout-direction: "RTL"; }

    .search-status-label {
      @extend %t-title3;
      @include span-columns(9);
      min-height: $course-search-input-height;

      @include media($bp-tiny) {
        @include fill-parent();
        @include font-size(20);
      }

      @include media($bp-small) {
        @include span-columns(4);
        @include font-size(20);
      }

      @include media($bp-medium) {
        @include span-columns(4);
      }

      @include media($bp-large) {
        @include span-columns(8);
      }

    }

    .wrapper-search-input {
      @include span-columns(3);
      position: relative;

      @include media($bp-tiny) {
        @include fill-parent();
      }

      @include media($bp-small) {
        @include span-columns(4);
      }

      @include media($bp-medium) {
        @include span-columns(4);
      }

      @include media($bp-large) {
        @include span-columns(4);
      }
    }
  }

  .discovery-input {
    @extend %ui-depth1;
    @extend %t-copy-sub1;
    @extend %t-demi-strong;
    @include border-radius(3px);
    @include padding-right(55px);
    width: 100%;
    border: 2px solid $gray-l3;
    height: $course-search-input-height;
    color: $black;
    font-style: normal;

    //STATE: focus
    &:focus {
      @extend %no-outline;
      box-shadow: none;
      border-color: $blue-d2;
    }
  }

  .discovery-submit {
    @extend %ui-depth2;
    @extend %t-icon3;
    @extend %t-strong;
    @include margin-left(-2px);
    @include right(0);
    position: absolute;
    top: 0;
    border: 2px solid $blue-d2;
    border-radius: ($baseline*0.1);
    box-shadow: none;
    background: $blue;
    padding: 0 ($baseline*0.7);
    height: $course-search-input-height;
    color: $white;
    text-shadow: none;

    //STATE: hover, focus
    &:hover, &:focus {
      background: $blue-d1;
    }
  }

  .loading-spinner {
    @include transition(all $tmg-f1 ease-out 0s);
    background: $blue;
    position: absolute;
    top: ($baseline*0.7); // same as padding rule for .discovery-submit
  } 
}

// +Filters - Search
// ====================
.find-courses {

  .filters {
    @include clearfix();
    margin-top: ($baseline/2);
    border-top: 2px solid $courseware-button-border-color;
    border-bottom: 2px solid $courseware-button-border-color;
    width: 100%;
    height: auto;
    max-height: ($baseline*10);

    ul {
      @include padding-left(0);
      margin: 0;
      list-style: outside none none;
    }

    li {
      @include float(left);
      @include margin(($baseline/2), $baseline, ($baseline/2), 0);
      position: relative;
      padding: ($baseline/2) ($baseline*0.75);
      background: $courseware-button-border-color;
      width: auto;

      .facet-option {
        @extend %t-strong;
        color: $gray-d2;
        text-decoration: none;

        i {
          color: $gray-l2;
        }
      }
    }

    .clear-filters {
      @include line-height(29.73);
      @extend %t-icon5;
      @extend %t-strong;
      margin: ($baseline/2);
      width: auto;
      text-align: center;
      color: $blue-d1;
    }

    .flt-right {
      @include float(right);
    }
  }

}

// +Facets - Sidebar - Search
// ====================
.find-courses .search-facets {
  @include fill-parent();
  @include omega();
  @include box-sizing(border-box);
  @extend %ui-depth1;
  position: relative;
  margin: ($baseline*2) 0 ($baseline*3.5) 0;
  box-shadow: 1px 2px 5px $black-t0;
  border-top: 1px solid $black;
  border-bottom: 2px solid $black;
  background-color: $white;
  max-height: ($baseline*100);

  @include media($bp-tiny) {
    @include fill-parent();
  }

  @include media($bp-small) {
    @include span-columns(4);
  }

  @include media($bp-medium) {
    @include span-columns(8);
  }

  @include media($bp-large) {
    @include span-columns(4);
  }

  @include media($bp-huge) {
    @include span-columns(3);
  }

  &.phone-menu {
    border: medium none;
    padding: 0;
    overflow: visible;
  }

  &:before {
    @include right(0);
    position: absolute;
    top: (-$baseline*0.15);
    opacity: 0;
    background-color: $white;
    padding: ($baseline*2) ($baseline*0.75) 0 ($baseline*0.75);
    width: ($baseline*2.5);
    height: ($baseline/4);
    content: "";
  }

  .header-search-facets, .header-facet {
    @extend %t-title6;
    padding: ($baseline/2);
    margin: 0;
    color: $facet-text-color;
    text-transform: none;
  }

  .header-facet {
    margin: 0 ($baseline/2);
    padding: ($baseline/2) 0;
  }

  .search-facets-lists section {
    border-top: 1px solid $courseware-button-border-color;
  }

  .facet-list {
    @extend %ui-no-list;
    padding-bottom: ($baseline/2); 
  }

  .facet-option {
    //@include float(left);
    @include line-height(18.92);
    @include transition(all $tmg-f2 ease-out 0s);
    @include clearfix();
    @extend %t-action3;
    @extend %text-truncated;
    border-radius: 0px;
    opacity: 1;
    width: 100%;
    color: $facet-text-color;

    &.collapse {
      max-height: ($baseline*14);
    }

    li {
      @include clearfix();
      position: relative;
      clear: both;
      padding: 0;
      height: ($baseline*1.5);
    }

    .count {
      @include right($baseline*0.6);
      @include box-sizing(border-box);
      @include transition(all 0.2s ease-out);
      @include line-height(18.92);
      position: absolute;
    }

    //STATE: hover
    &:hover {
      background: $facet-background-color;
      color: $white;
      text-decoration: none;

      .count {
        color: $white;
      }
    }
  }

  .toggle {
    @include clearfix();

    button {
      @extend %t-icon6;
      @extend %t-strong;
      color: $facet-background-color;
    }
  }
}

// +All Other Styles
// ====================
.find-courses, .university-profile {
  background: $course-profile-bg;
  padding-bottom: ($baseline*3);


  section.message {
    @include columns(2 20px);
    @include clearfix();
    border-top: 1px solid $border-color-2;
    margin-top: $baseline;
    padding-top: ($baseline*3);

  }
}

